--- a/Road_Casualties_in_Kenya.ipynb
+++ b/Road_Casualties_in_Kenya.ipynb
@@ -1,6 +1,60 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bdf20ec5",
+   "metadata": {},
+   "source": [
+    "# Understanding the Drivers of Road Traffic Injuries and Fatalities in UK\n",
+    "# 1. Overview\n",
+    "Road traffic crashes are a leading cause of death and serious injury in UK, with significant social and economic consequences. This project analyzes road traffic crash data to identify the key factors associated with injury and fatal outcomes. The intent is to replace anecdotal assumptions with evidence-based insights that can inform prevention strategies, policy formulation, and operational interventions aimed at reducing road traffic deaths and serious injuries.\n",
+    "\n",
+    "# 2. Business Understanding\n",
+    "## 2.1 Problem Statement\n",
+    "Despite multiple road safety initiatives, severe and fatal road crashes persist on UK roads. Decision-makers often lack clear, data-backed understanding of which factors most strongly contribute to crash severity, limiting the effectiveness of interventions.\n",
+    "\n",
+    "## 2.2 Why this is importtant\n",
+    "- Road traffic injuries place a heavy burden on public health systems.\n",
+    "- Fatal and serious crashes result in long-term economic losses to families and the country.\n",
+    "- Resources for road safety are limited and must be targeted where impact is highest.\n",
+    "\n",
+    "## 2.3 Key Stakeholders\n",
+    "1. National and county road safety authorities\n",
+    "2. Traffic police and enforcement agencies\n",
+    "3. Ministry of Transport and Infrastructure\n",
+    "4. Public health and emergency response agencies\n",
+    "5. Road users and the general public\n",
+    "6. Development partners and insurers\n",
+    "\n",
+    "## 2.4 Main Objective\n",
+    "To identify and quantify the key factors that increase the likelihood of severe and fatal road traffic crashes in UK.\n",
+    "\n",
+    "## 2.5 Specific Objectives\n",
+    "- Describe the distribution of crash severity across UKn roads.\n",
+    "- Identify road, environmental, vehicle, and temporal factors associated with injury severity.\n",
+    "- Statistically test which factors have a significant relationship with crash severity.\n",
+    "- Model crash severity risk while controlling for multiple contributing factors.\n",
+    "- Translate analytical findings into actionable, evidence-based recommendations.\n",
+    "\n",
+    "## 2.6 Success Criteria\n",
+    "The project will be considered successful if it:\n",
+    "- Clearly identifies a small set of high-impact severity drivers.\n",
+    "- Provides statistically validated evidence, not descriptive trends only.\n",
+    "- Produces interpretable results suitable for non-technical stakeholders.\n",
+    "- Leads directly to practical and defensible road safety recommendations.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8563d6bd",
+   "metadata": {},
+   "source": [
+    "# 3. Data Understanding\n",
+    "## 3.1 Data Source\n",
+    "The dataset is obtained from the UK government's Road Safety Open Data website. This dataset is managed by the Department for Transport (DfT) and covers reported road collision statistics in Great Britain. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "f350e61f",
