--- a/Road_Casualties_in_Kenya.ipynb
+++ b/Road_Casualties_in_Kenya.ipynb
@@ -471,6 +471,137 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77a27428",
+   "metadata": {},
+   "source": [
+    "# 4. Data Quality and Sanity Checks\n",
+    "\n",
+    "Before analysis, the dataset will undergo structured validation to ensure reliability:\n",
+    "\n",
+    "Missing value assessment and documentation\n",
+    "\n",
+    "Consistency checks across severity and casualty counts\n",
+    "\n",
+    "Category normalization and labeling verification\n",
+    "\n",
+    "Outlier detection for numeric variables\n",
+    "\n",
+    "No corrective action will be taken without justification and documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce81c64c",
+   "metadata": {},
+   "source": [
+    "# 5. Exploratory Data Analysis (EDA)\n",
+    "5.1 Univariate Analysis\n",
+    "\n",
+    "Distribution of crash severity\n",
+    "\n",
+    "Frequency distributions for key categorical variables\n",
+    "\n",
+    "Summary statistics for numerical variables\n",
+    "\n",
+    "Purpose: understand baseline patterns and dominant conditions.\n",
+    "\n",
+    "5.2 Bivariate Analysis\n",
+    "\n",
+    "Crash severity analyzed against:\n",
+    "\n",
+    "Road type\n",
+    "\n",
+    "Lighting and weather conditions\n",
+    "\n",
+    "Time of day\n",
+    "\n",
+    "Speed limit categories\n",
+    "\n",
+    "Vehicle types\n",
+    "\n",
+    "Purpose: identify visible relationships and form testable hypotheses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a2c7245",
+   "metadata": {},
+   "source": [
+    "# 6. Statistical Analysis\n",
+    "\n",
+    "Statistical testing will be used to validate EDA findings:\n",
+    "\n",
+    "Chi-square tests for categorical factors vs severity\n",
+    "\n",
+    "ANOVA or non-parametric equivalents for numeric variables\n",
+    "\n",
+    "Only statistically supported relationships will be advanced to modeling and recommendations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34b34837",
+   "metadata": {},
+   "source": [
+    "# 7. Predictive and Risk Modeling\n",
+    "\n",
+    "An interpretable modeling approach will be applied:\n",
+    "\n",
+    "Binary or ordinal severity target definition\n",
+    "\n",
+    "Logistic regression and/or tree-based models\n",
+    "\n",
+    "Feature importance and effect size interpretation\n",
+    "\n",
+    "The focus is on understanding risk drivers, not maximizing prediction accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "572ac483",
+   "metadata": {},
+   "source": [
+    "# 8. Insights and Interpretation\n",
+    "\n",
+    "Findings from EDA, statistics, and modeling will be synthesized to:\n",
+    "\n",
+    "Rank severity contributors by impact\n",
+    "\n",
+    "Explain how and under what conditions severity increases\n",
+    "\n",
+    "Distinguish controllable vs contextual risk factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ff084c5",
+   "metadata": {},
+   "source": [
+    "# 9. Recommendations\n",
+    "\n",
+    "Evidence-backed recommendations aligned to stakeholder decision-making, including:\n",
+    "\n",
+    "Infrastructure interventions\n",
+    "\n",
+    "Enforcement prioritization\n",
+    "\n",
+    "Policy and regulatory focus areas\n",
+    "\n",
+    "Public awareness targeting\n",
+    "\n",
+    "10. Conclusion\n",
+    "\n",
+    "The project concludes by reinforcing how data-driven understanding of crash severity can materially support Kenya’s goal of reducing road traffic deaths and serious injuries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d8e4632",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
